refactor: resolve release quality gate findings